# mai_oop_3s

lab1/: CMakeLists.txt  readme.md
lab1/include/: gcd.h
lab1/src/: gcd.cpp  main.cpp
lab1/tests/: gcd_tests.cpp
lab2/: CMakeLists.txt  main.cpp
lab2/include/: decimal.hpp  vector.hpp
lab2/src/: decimal.cpp  vector.cpp
lab2/tests/: test_decimal.cpp
lab3/: CMakeLists.txt
lab3/include/: Figure.h  Hexagon.h  Octagon.h  Triangle.h
lab3/src/: Figure.cpp  Hexagon.cpp  Octagon.cpp  Triangle.cpp  main.cpp
lab3/tests/: test.cpp
